2018-11-09  Mark Wielaard  <mark@klomp.org>

	* elf_compress_gnu.c (elf_compress_gnu): Use elf_getdata.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* elf-knowledge.c (ELF_NOTE_GNU_BUILD_ATTRIBUTE_PREFIX): New define.
	(NT_GNU_BUILD_ATTRIBUTE_{OPEN,FUNC}): Likewise.
	(GNU_BUILD_ATTRIBUTE_TYPE_{NUMERIC,STRING,BOOL_TRUE,BOOL_FALSE}):
	Likewise.
	(GNU_BUILD_ATTRIBUTE_{VERSION,STACK_PROT,RELRO,STACK_SIZE,TOOL,ABI,
	PIC,SHORT_ENUM}): Likewise.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* elf_compress.c (__libelf_reset_rawdata): Make rawdata change
	explicit by calling __libelf_set_data_list.
	* elf_getdata.c (convert_data): Don't convert if type is ELF_T_BYTE
	even if endianness is different.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* libelf.h (Elf_Type): Add ELF_T_NHDR8.
	* libelfP.h (__libelf_data_type): Add align argument.
	(NOTE_ALIGN): Split into...
	(NOTE_ALIGN4): ... and ...
	(NOTE_ALIGN8): this.
	* elf32_xlatetom.c (xlatetom): Recognize both ELF_T_NHDR and
	ELF_T_NHDR8.
	* elf_compress.c (elf_compress): Pass zdata_align to
	__libelf_data_type.
	* elf_compress_gnu.c (elf_compress_gnu): Pass sh_addralign to
	__libelf_data_type.
	* elf_getdata.c (shtype_map): Add ELF_T_NHDR8.
	(__libelf_data_type): Take align as extra argument, use it to
	determine Elf_Type.
	(__libelf_set_rawdata_wrlock): Recognize ELF_T_NHDR8. Pass align to
	__libelf_data_type.
	* gelf_fsize.c (__libelf_type_sizes): Add ELF_T_NHDR8.
	* gelf_getnote.c (gelf_getnote): Use Elf_Type of Elf_Data to calculate
	padding.
	* gelf_xlate.c (__elf_xfctstom): Set ELF_T_NHDR to elf_cvt_note4,
	add ELF_T_NHDR8.
	* note_xlate.h (elf_cvt_note): Take nhdr8 argument and use it to
	determine padding.
	(elf_cvt_note4): New function.
	(elf_cvt_note8): Likewise.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* elf32_updatefile.c (updatemmap): Use shnum, not ehdr->e_shnum.
	* elf_getscn.c (elf_getscn): Create section zero if it is requested,
	but doesn't exist yet.
